page title alignment with container fixed

--- a/sass/admin/block-editor-styles.scss
+++ b/sass/admin/block-editor-styles.scss
@@ -447,6 +447,9 @@ h6{
 		}
 	}
 }
+.ast-page-builder-template .edit-post-visual-editor__post-title-wrapper {
+	margin-left: 0 !important;
+}
 
 /**
  * Gutenberg editor improving UI/UX.
