--- a/sass/admin/wp-editor-styles.scss
+++ b/sass/admin/wp-editor-styles.scss
@@ -147,6 +147,9 @@ html {
 		}
 	}
 }
+.ast-page-builder-template .edit-post-visual-editor__post-title-wrapper {
+	margin-left: 0 !important;
+}
 /**
  * For widget screen.
  */
